# ghostcrate

./: .dockerignore  .env.example  .env.production  Cargo.toml  DEPLOYMENT.md  Dockerfile  FEATURES_AND_ROADMAP.md  GITHUB_OIDC_SETUP.md  Leptos.toml  OIDC_AZURE_SETUP.md  README.md  cargo-config.toml.example  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.conf.example  oidc_deps.txt  update.sh
data/: ghostcrate.db
migrations/: 001_initial.sql  002_oidc_support.sql  002_performance_indexes.sql
scripts/: LOCATION.md  deploy.sh  proxmox-lxc.sh
src/: lib.rs  main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/db/: mod.rs  oidc_functions.rs  organization_functions.rs
src/models/: crate_model.rs  github.rs  metrics.rs  mod.rs  oidc.rs  organization.rs  session.rs  user.rs
src/storage/: mod.rs  s3.rs
src/web/: admin_handlers.rs  app.rs  auth_handlers.rs  cargo_handlers.rs  github_handlers.rs  health_handlers.rs  mirror_handlers.rs  mod.rs  oidc_handlers.rs  organization_handlers.rs
style/: main.css
